# times-hub

./: README.md
times-hub-api/: .gitignore  Cargo.toml  Makefile  README.md
times-hub-api/diagrams/: README.md
times-hub-api/docker/: docker-compose.yml
times-hub-api/migrations/: 20230522191638_init.sql
times-hub-api/src/: entity.rs  handler.rs  main.rs  repository.rs  service.rs
times-hub-api/src/message/: handler.rs  mod.rs  service.rs
times-hub-api/src/workspace/: handler.rs  mod.rs  repository.rs  service.rs
times-hub-front/: .eslintrc.yml  .gitignore  Makefile  README.md  package-lock.json  package.json
times-hub-front/src/: App.test.tsx  App.tsx  index.tsx  reportWebVitals.ts
times-hub-front/src/components/: MessageForm.tsx  WorkspaceCreateButton.tsx  WorkspaceCreateFormDialog.tsx  WorkspaceEditButton.tsx  WorkspaceEditFormDialog.tsx  WorkspaceForm.tsx  WorkspaceFormDialog.tsx  WorkspaceItem.tsx  WorkspaceList.tsx
times-hub-front/src/components/FormItem/: WorkspaceName.tsx  WorkspaceWebhookUrl.tsx
times-hub-front/src/lib/api/: message.ts  workspace.ts
times-hub-front/src/types/: message.d.ts  message.ts  workspace.d.ts  workspaceDefault.ts
